ストリームをリストに収集する処理を修正